--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     {% if page.description %}
       <meta name="description" content="{{ page.description }}">
     {% else %}
-      <meta name="description" content="This is a dangerous site.">
+      <meta name="description" content="Drew Austin">
     {% endif %}
     <link href="/favicon.png" rel="icon">
     <meta charset="utf-8">
